<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/classes_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/classes_list"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginTop="91dp"

        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
